--- a/trunk/FontCreator/SJISFontCreator.vcproj
+++ b/trunk/FontCreator/SJISFontCreator.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../ft2411/include;./"
+				AdditionalIncludeDirectories="../lib/ft2411/include;./"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,9 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="freetype.lib"
+				AdditionalDependencies="freetype2411MT_d.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../lib/debug"
+				AdditionalLibraryDirectories="../lib/ft2411/lib/vc2008"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -117,7 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../ft2411/include;./"
+				AdditionalIncludeDirectories="../lib/ft2411/include;./"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -136,9 +136,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="freetype.lib"
+				AdditionalDependencies="freetype2411MT.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="../lib/release"
+				AdditionalLibraryDirectories="../lib/ft2411/lib/vc2008"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
