--- a/Translator/Translator.vcproj
+++ b/Translator/Translator.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Bin32/GabrielKnight"
+			OutputDirectory="../Bin32/KQ6"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			UseOfMFC="2"
