--- a/ResExtractor/ResExtractor.vcproj
+++ b/ResExtractor/ResExtractor.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Bin32"
+			OutputDirectory="../res/lb1"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="2"
