--- a/Translator/Translator.vcxproj
+++ b/Translator/Translator.vcxproj
@@ -44,7 +44,7 @@
     <_ProjectFileVersion>12.0.30501.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>../Bin32/Eco1\</OutDir>
+    <OutDir>../Bin32/QFG1\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
