--- a/GK1RemakeOldDataImport/GK1Remake.vcxproj
+++ b/GK1RemakeOldDataImport/GK1Remake.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{71E073C9-9D9B-458A-A51C-3DE5B9231BB0}</ProjectGuid>
     <RootNamespace>GK1Remake</RootNamespace>
     <Keyword>MFCProj</Keyword>
+    <ProjectName>GK1RemakeOldDataImport</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
