--- a/TextTranslator/TextTranslator.vcxproj
+++ b/TextTranslator/TextTranslator.vcxproj
@@ -69,6 +69,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <DisableSpecificWarnings>4018</DisableSpecificWarnings>
+      <AdditionalIncludeDirectories>../thirdparty/excel</AdditionalIncludeDirectories>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
