--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -33,7 +33,7 @@ jobs:
         git clone https://github.com/microsoft/vcpkg
         bootstrap-vcpkg.bat
         vcpkg integrate install
-        vcpkg install libcurl
+        vcpkg install curl
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
