--- a/TextTranslator/Translator.rc
+++ b/TextTranslator/Translator.rc
@@ -103,7 +103,7 @@ CAPTION "Text Translator"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_ORIGINAL_TEXT,20,116,420,83,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TRANSLATED_TEXT,21,224,412,75,ES_AUTOHSCROLL
+    EDITTEXT        IDC_TRANSLATED_TEXT,21,224,412,75,ES_MULTILINE
     LTEXT           "Original Text",IDC_STATIC,27,44,42,8
     LTEXT           "Translated Text",IDC_STATIC,24,211,52,8
     PUSHBUTTON      "Next Text",IDC_BUTTON1,289,37,50,14
@@ -118,7 +118,7 @@ BEGIN
     EDITTEXT        IDC_EDIT3,24,11,316,16,ES_AUTOHSCROLL
     PUSHBUTTON      "Search Text",IDC_BUTTON8,344,11,50,14
     PUSHBUTTON      "Import",IDC_BUTTON9,21,301,50,14
-    PUSHBUTTON      "?? ??? ??",IDC_SINGLE_TRANSLATE,238,55,50,14
+    PUSHBUTTON      "?? ?? ??",IDC_SINGLE_TRANSLATE,238,55,50,14
 END
 
 
