--- a/TextTranslator/Translator.rc
+++ b/TextTranslator/Translator.rc
@@ -97,28 +97,25 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,113,41,50,14,WS_GROUP
 END
 
-IDD_TRANSLATOR_DIALOG DIALOGEX 0, 0, 447, 333
+IDD_TRANSLATOR_DIALOG DIALOGEX 0, 0, 649, 386
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Text Translator"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_ORIGINAL_TEXT,20,116,420,83,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TRANSLATED_TEXT,21,224,412,75,ES_MULTILINE
-    LTEXT           "Original Text",IDC_STATIC,27,44,42,8
-    LTEXT           "Translated Text",IDC_STATIC,24,211,52,8
-    PUSHBUTTON      "Next Text",IDC_BUTTON1,289,37,50,14
-    PUSHBUTTON      "Next File",IDC_BUTTON2,390,37,50,14
-    PUSHBUTTON      "Save Text",IDC_BUTTON3,268,302,50,14
-    PUSHBUTTON      "Exit",IDC_BUTTON4,383,302,50,14
-    PUSHBUTTON      "Prev Text",IDC_BUTTON5,238,37,50,14
-    LTEXT           "File Name",IDC_STATIC_FILENAME,81,45,80,8
-    LTEXT           "MessageIndex",IDC_STATIC_MESSAGEINDEX,172,45,48,8
-    PUSHBUTTON      "PrevFile",IDC_BUTTON6,340,37,50,14
-    PUSHBUTTON      "Generate Output",IDC_BUTTON7,320,302,62,14
-    EDITTEXT        IDC_EDIT3,24,11,316,16,ES_AUTOHSCROLL
-    PUSHBUTTON      "Search Text",IDC_BUTTON8,344,11,50,14
-    PUSHBUTTON      "Import",IDC_BUTTON9,21,301,50,14
-    PUSHBUTTON      "?? ?? ??",IDC_SINGLE_TRANSLATE,238,55,50,14
+    EDITTEXT        IDC_ORIGINAL_TEXT,18,251,624,49,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TRANSLATED_TEXT,18,318,624,41,ES_MULTILINE
+    LTEXT           "Original Text",IDC_STATIC,25,241,42,8
+    LTEXT           "Translated Text",IDC_STATIC,25,306,52,8
+    PUSHBUTTON      "Save Text",IDC_BUTTON3,478,362,50,14
+    PUSHBUTTON      "Exit",IDC_BUTTON4,593,362,50,14
+    PUSHBUTTON      "Generate Output",IDC_BUTTON7,530,362,62,14
+    EDITTEXT        IDC_EDIT3,17,222,536,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Search Text",IDC_BUTTON8,592,222,50,14
+    PUSHBUTTON      "Import",IDC_BUTTON9,19,361,50,14
+    PUSHBUTTON      "Translate",IDC_SINGLE_TRANSLATE,591,302,51,14
+    CONTROL         "",IDC_TREE2,"SysTreeView32",WS_BORDER | WS_HSCROLL | WS_TABSTOP,17,7,62,209
+    CONTROL         "in trans",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,557,224,36,10
+    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,83,7,559,209
 END
 
 
@@ -180,9 +177,9 @@ BEGIN
     IDD_TRANSLATOR_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 440
+        RIGHTMARGIN, 642
         TOPMARGIN, 7
-        BOTTOMMARGIN, 325
+        BOTTOMMARGIN, 378
     END
 END
 #endif    // APSTUDIO_INVOKED
